--- a/procfile
+++ b/procfile
@@ -1,2 +1,2 @@
-web: gunicorn -b :8080 shop.wsgi --log-file
+web: gunicorn -b 0.0.0.0:8080 shop.wsgi --log-file
 web: python manage.py migrate && gunicorn shop.wsg
